# lib-bio

./: .gitignore  Diagram.xmi  Makefile  Makefile.am  README.md  adt.h  algorithms.h  alignment.h  config.h  configure.ac  configure.scan  csfast.sh  filtering.h  generator.h  go.sh  io.h  main.cpp  quality.h  sequence.h  tasks.cpp  tasks.hpp  test.h  util.h
adt/: DynamicProgramming.hpp  HybridIndex.hpp  Index.hpp  KeyValuePair.hpp
algorithms/: dft.cpp  dft.hpp  dstats.cpp  dstats.hpp  hamming.cpp  hamming.hpp  kmerscore.cpp  kmerscore.hpp  spectrum.cpp  spectrum.hpp  types.hpp
alignment/: MatchSimilarity.hpp  Position.hpp  ScoredPosition.hpp  SmithWatermanDP.cpp  SmithWatermanDP.hpp  align.cpp  aligndef.hpp  kspectrum.cpp
doc/: Makefile.am  doxygen.conf  index.html
doc/bio-tk/: Makefile.inc  biotk.info  usage.texi
filtering/: FilterBase.hpp
generator/: GenomeGenerator.cpp  GenomeGenerator.hpp  ReadGenerator.hpp
include/: lbio.h
include/algorithms/: d2_distance.hpp  distances.hpp  dynamic_programming.hpp  edit_distance.hpp  hamming_distance.hpp  jaccard_distance.hpp
include/common/: preprocs.h  types.h
include/core/: CompressedReadSet.h  CompressedSequence.h  DNAAlphabet.hpp  DNAAlphabet2Bits.hpp  DNACompressedSymbol.h  FullQuality.hpp  FullyQualifiedSequence.hpp  (+7 more)
io/: CSFastFormat.cpp  CSFastRead.cpp  CSFastRead.hpp  FastFormat.cpp  FastFormat.h  FastqFormat.cpp  FastqFormat.h  FastqLazyLoader.cpp  FastqLazyLoader.hpp  FastqRead.cpp  FastqRead.h  FastqRead.hpp  Format.cpp  Format.h
quality/: CSQualityRead.cpp  CSQualityRead.hpp  FullQuality.hpp  PhredQuality.cpp  PhredQuality.hpp  ProbabilisticQuality.cpp  ProbabilisticQuality.hpp  Quality.hpp  QualityCommon.cpp  QualityCommon.hpp  QualityConstants.hpp  QualityCostants.h  ReadQuality.cpp  ReadQuality.hpp  phred_const.hpp
sequence/: ColorAlphabet.cpp  ColorAlphabet.hpp  CompressedReadSet.h  CompressedSequence.cpp  CompressedSequence.h  DNAAlphabet2Bits.cpp  DNAAlphabet2Bits.hpp  DNACompressedSymbol.cpp  KMer.cpp  NumericKMer.cpp  NumericKMer.hpp  QualifiedSequence.cpp  QualifiedSequence.hpp  Read.cpp  Read.hpp  Reference.cpp  Reference.hpp  Sequence.h
src/: algorithms.h  core.h  io.h  quality.h  sequence.h  util.h
src/algorithms/: HybridIndex.cpp  Makefile  Makefile.am  MatchSimilarity.cpp  MatchSimilarity.hpp  Position.hpp  SmithWatermanDP.cpp  SmithWatermanDP.hpp  algtest.cpp  align.cpp  aligndef.hpp  dft.cpp  dft.hpp  dstats.hpp  hamming.hpp  kmerscore.cpp  kmerscore.hpp  spectrum.cpp  spectrum.hpp  types.hpp
src/core/: ColorAlphabet.cpp  CompressedReadSet.cpp  CompressedSequence.cpp  DNAAlphabet.cpp  DNAAlphabet2Bits.cpp  DNAAlphabet2Bits.hpp  DNACompressedSymbol.cpp  FullQuality.cpp  FullQuality.hpp  FullyQualifiedSequence.cpp  FullyQualifiedSequence.hpp  KMer.cpp  KMer.hpp  Makefile  Makefile.am  NumericKMer.cpp  NumericKMer.hpp  PhredQuality.cpp  PhredQuality.hpp  ProbabilisticQuality.cpp  QualifiedSequence.cpp  QualifiedSequence.hpp  Quality.hpp  QualityCommon.hpp  Read.cpp  Reference.cpp  coretest.cpp
src/io/: BamFormat.cpp  BamFormat.hpp  CSFastFormat.hpp  CSFastRead.cpp  CSFastRead.hpp  FastFormat.cpp  FastFormat.hpp  FastqFormat.cpp  FastqFormat.hpp  FastqLazyLoader.cpp  FastqLazyLoader.hpp  FastqRead.cpp  FastqRead.hpp  Format.cpp  Format.hpp  Makefile  Makefile.am  iotest.cpp
src/simulator/: Makefile  Makefile.am  README  align.cpp  chain.cpp  chain.hpp  common.h  common.hpp  edit.cpp  edit.hpp  edit_estimates.hpp  generator.cpp  generator.hpp  io.cpp  io.hpp  log.cpp  log.hpp  online.cpp  online.hpp  options.cpp  options.hpp  options_BACKUP_26229.hpp  options_BASE_26229.hpp  options_LOCAL_26229.hpp  prob.cpp  prob.hpp  simulator.cpp  simulator.hpp  test.cpp  util.cpp  util.hpp
src/simulator/extensions/: boost_ext.hpp
src/simulator/extensions/boost_ext/: boost_edit.hpp  boost_options.hpp
src/simulator/include/: align.hpp  chain.hpp  common.hpp  edit.hpp  edit_estimates.hpp  generator.hpp  io.hpp  lcs.hpp  log.hpp  online.hpp  options.hpp  prob.hpp  util.hpp
src/simulator/util/: LowerBoundGMR.ipynb  all_alphabets.sh  band_approx.py  eccentricity_postprocess.py  ed_sample.sh  edit_dist_usage.sh  edit_distance.py  entropy.py  entropy_tests.sh  exhastive.sh  int_partition.py  lb_approx.py  lb_path_gen.py  lb_script.py  lb_shell.py  mean.py  mesh_regression.py  run100.sh  scripts.py  scripts_processing.ipynb  shift_distance.ipynb  sims.sh  ub_anlysis.py  ub_regression.py
src/simulator/util/.ipynb_checkpoints/: shift_distance-checkpoint.ipynb
util/: io.cpp  io.hpp  options.cpp  options.hpp
(+22 files in other folders)
