bin_PROGRAMS = simulator.out
simulator_out_SOURCES = simulator.cpp options.cpp generator.cpp online.cpp chain.cpp \
	util.cpp io.cpp prob.cpp align.cpp test.cpp edit.cpp log.cpp
simulator_out_LDADD = -lhts

bin_PROGRAMS = test.out
test_out_SOURCES = test_s.cpp options.cpp generator.cpp online.cpp chain.cpp \
	util.cpp io.cpp prob.cpp align.cpp edit.cpp log.cpp

AM_CXXFLAGS = -std=c++11 -Wall
